# JU-sem6-effective-and-modern-cpp

./: .gitignore  README.md
lab/lab01/: ex1.cpp  ex2.cpp  ex3.cpp  matrix.h  result.txt  test  test.cpp
lab/lab02/: Box.h  DynamicContainer.h  StaticContainer.h  StaticContainer2.h  String.h  test
lab/lab03/: ex3.1_function_pointers.cpp  ex3.2_lambda_expressions.cpp  ex3.3_Printer.cpp  test.cpp
lab/lab04/: ex_4_1_templates.cpp  ex_4_2_compare.cpp  ex_4_3_selectIf.cpp
lab/lab05/: dynamicVector.h  ex1_Pair.cpp  ex2_staticVector.cpp  ex4_conversion.cpp  staticVector.h
lab/lab06/: ex1_variadicFunctions.cpp  ex2_proxy.cpp  ex3_Mixins.cpp  ex4_MultiVector.cpp  mixins.h  multiVector.h  proxy.h
lab/lab07/: CMakeLists.txt  Vector.h  ex_7_1_type_traits.cpp  ex_7_3_Vector_policies.cpp  ex_7_4_Vector_operators.cpp
lab/lab08/: CMakeLists.txt  Filter.h  Matrix.h  Range.h  ex_8_1_Range.cpp  ex_8_2_MatrixModifiers.cpp  ex_8_4_Filter.cpp
lab/lab09_stl/: CMakeLists.txt  ex_9_1_stdalgorithms.cpp  ex_9_2_words.cpp  ex_9_3_Trie.cpp
lab/lab10/: ex1.cpp  ex2.cpp  ex3.cpp
lab/lab11/: .ex3.cpp.swp  ex1.cpp  ex2.cpp  ex3.cpp
lab/lab12/: ex1-random.cpp  ex3-asciicounter.cpp  threadstests.cpp
lab/lab12/mandelbrot/: ex_11_2_Mandelbrot.cpp  mandelbrot  test.cpp
lab/lab13/: ex2.cpp  ex3.cpp
lab/lab13/ex1/: CMakeLists.txt  main.cpp  vector_instantiations.cpp  vector_module.ixx
